--- a/users/package.json
+++ b/users/package.json
@@ -15,11 +15,9 @@
     "dayjs": "^1.9.6",
     "dynamoose": "^2.4.1",
     "http-status": "^1.5.0",
-    "morgan": "^1.10.0",
     "ramda": "^0.27.1",
     "tcomb": "^3.2.29",
-    "uuid": "^8.3.1",
-    "winston": "^3.3.3"
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
